# ncconv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  vcpkg.json
src/: main.cpp
src/Loaders/: CtlLoader.cpp  CtlLoader.hpp  LoadersUtil.cpp  LoadersUtil.hpp  VolumeLoader.hpp
src/Utils/: Convert.cpp  Convert.hpp  FileUtils.cpp  FileUtils.hpp
src/Volume/: VolumeData.cpp  VolumeData.hpp
